change main file at package.json and config PORT

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "book-api-node",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "start": "cross-env NODE_ENV=development node app.js",
