--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "sequelize": "^6.35.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.3"
   }
 }
